[gd_scene load_steps=5 format=3 uid="uid://88qnv41xsjnh"]

[ext_resource type="Theme" uid="uid://g8y3r3oufsf5" path="res://Big Font.tres" id="1_nbpcq"]
[ext_resource type="Script" path="res://lp_4_2.gd" id="1_sy3fs"]
[ext_resource type="Theme" uid="uid://chp13krld84ky" path="res://Biggish Font.tres" id="2_fu8p4"]

[sub_resource type="Theme" id="Theme_4cb6f"]
default_font_size = 45

[node name="LP 4-2" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_sy3fs")

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 17.0
offset_top = -1.0
offset_right = 588.0
offset_bottom = 371.0
theme = ExtResource("1_nbpcq")
text = "Enter Package Sizes:
Weight in Kilograms:
Length in Centimeters:
Width in Centimeters:
Height in Centimeters:"

[node name="txtKilograms" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 614.0
offset_top = 81.0
offset_right = 1033.0
offset_bottom = 152.0
theme = ExtResource("2_fu8p4")

[node name="txtLength" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 614.0
offset_top = 155.0
offset_right = 1033.0
offset_bottom = 226.0
theme = ExtResource("2_fu8p4")

[node name="txtWidth" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 614.0
offset_top = 230.0
offset_right = 1033.0
offset_bottom = 301.0
theme = ExtResource("2_fu8p4")

[node name="txtHeight" type="LineEdit" parent="."]
layout_mode = 0
offset_left = 614.0
offset_top = 306.0
offset_right = 1033.0
offset_bottom = 377.0
theme = ExtResource("2_fu8p4")

[node name="btnCalc" type="Button" parent="."]
layout_mode = 0
offset_left = 117.0
offset_top = 556.0
offset_right = 354.0
offset_bottom = 621.0
theme = ExtResource("1_nbpcq")
text = "Calculate"

[node name="btnClear" type="Button" parent="."]
layout_mode = 0
offset_left = 454.0
offset_top = 556.0
offset_right = 693.0
offset_bottom = 636.0
theme = ExtResource("1_nbpcq")
text = "Clear"

[node name="btnExit" type="Button" parent="."]
layout_mode = 0
offset_left = 779.0
offset_top = 556.0
offset_right = 1018.0
offset_bottom = 636.0
theme = ExtResource("1_nbpcq")
text = "Exit"

[node name="lblOut" type="Label" parent="."]
layout_mode = 0
offset_left = 24.0
offset_top = 388.0
offset_right = 1072.0
offset_bottom = 561.0
theme = SubResource("Theme_4cb6f")

[connection signal="pressed" from="btnCalc" to="." method="_on_btn_calc_pressed"]
[connection signal="pressed" from="btnClear" to="." method="_on_btn_clear_pressed"]
[connection signal="pressed" from="btnExit" to="." method="_on_btn_exit_pressed"]
